fix testReadFromZarrita for gzip